生成多个可执行文件

--- a/clint/CMakeLists.txt
+++ b/clint/CMakeLists.txt
@@ -5,4 +5,8 @@ set(CMAKE_CXX_STANDARD 14)
 
 add_executable(clint main.cpp)
 
+add_executable(clint2 main.cpp)
+
 TARGET_LINK_LIBRARIES(clint pthread)
+
+TARGET_LINK_LIBRARIES(clint2 pthread)
