--- a/clint/CMakeLists.txt
+++ b/clint/CMakeLists.txt
@@ -7,6 +7,10 @@ add_executable(clint main.cpp)
 
 add_executable(clint2 main.cpp)
 
+add_executable(clint3 main.cpp)
+
 TARGET_LINK_LIBRARIES(clint pthread)
 
 TARGET_LINK_LIBRARIES(clint2 pthread)
+
+TARGET_LINK_LIBRARIES(clint3 pthread)
